// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scan output contract (golden) default / omitted mode is governed-only — legacy product.recalls do not become Signal cards: governed-default-no-legacy-recall 1`] = `
{
  "barcode": "9300601249114",
  "confidence": {
    "label": "low",
    "value": 0.465225,
  },
  "coverage": {
    "completeness": 0.07,
    "flags": [
      "low_completeness",
      "missing_nutrition",
      "missing_ingredients",
    ],
  },
  "errors": undefined,
  "market": "AU",
  "premium": {
    "subscriber": false,
  },
  "product_stub": {
    "barcode": "9300601249114",
    "source": "openfoodfacts",
  },
  "scores": {
    "methodology_version": "v1.4",
    "pillars": {
      "body": 18,
      "ethics": 18,
      "open": 18,
      "planet": 18,
    },
    "trust": 72,
  },
  "signals": {
    "premium_insight": [],
    "safety_regulatory": [],
    "transparency": [],
    "user_preference": [],
  },
  "sources_trace": [
    {
      "id": "openfoodfacts",
      "status": "hit",
    },
  ],
  "terminal_state": "success",
}
`;

exports[`scan output contract (golden) governed default — low completeness does not add Limited Product Data Signal: limited-data-coverage-flag-only 1`] = `
{
  "barcode": "9300601249114",
  "confidence": {
    "label": "low",
    "value": 0.4325,
  },
  "coverage": {
    "completeness": 0,
    "flags": [
      "low_completeness",
      "missing_nutrition",
      "missing_ingredients",
    ],
  },
  "errors": undefined,
  "market": "AU",
  "premium": {
    "subscriber": false,
  },
  "product_stub": {
    "barcode": "9300601249114",
    "source": "openfoodfacts",
  },
  "scores": {
    "methodology_version": "v1.4",
    "pillars": {
      "body": 18,
      "ethics": 18,
      "open": 18,
      "planet": 18,
    },
    "trust": 72,
  },
  "signals": {
    "premium_insight": [],
    "safety_regulatory": [],
    "transparency": [],
    "user_preference": [],
  },
  "sources_trace": [
    {
      "id": "openfoodfacts",
      "status": "hit",
    },
  ],
  "terminal_state": "success",
}
`;

exports[`scan output contract (golden) governed default — preference hits do not become public Signal cards: preference-not-public-signal 1`] = `
{
  "barcode": "9300601249114",
  "confidence": {
    "label": "medium",
    "value": 0.62885,
  },
  "coverage": {
    "completeness": 0.42,
    "flags": [
      "low_completeness",
    ],
  },
  "errors": undefined,
  "market": "AU",
  "premium": {
    "subscriber": false,
  },
  "product_stub": {
    "barcode": "9300601249114",
    "source": "openfoodfacts",
  },
  "scores": {
    "methodology_version": "v1.4",
    "pillars": {
      "body": 18,
      "ethics": 18,
      "open": 18,
      "planet": 18,
    },
    "trust": 72,
  },
  "signals": {
    "premium_insight": [],
    "safety_regulatory": [],
    "transparency": [],
    "user_preference": [],
  },
  "sources_trace": [
    {
      "id": "openfoodfacts",
      "status": "hit",
    },
  ],
  "terminal_state": "success",
}
`;

exports[`scan output contract (golden) governed default — web_search does not add public transparency Signal (coverage flag only): web-search-coverage-flag-only 1`] = `
{
  "barcode": "9300601249114",
  "confidence": {
    "label": "low",
    "value": 0.19655,
  },
  "coverage": {
    "completeness": 0.07,
    "flags": [
      "low_completeness",
      "web_search_fallback",
      "missing_nutrition",
      "missing_ingredients",
    ],
  },
  "errors": undefined,
  "market": "AU",
  "premium": {
    "subscriber": false,
  },
  "product_stub": {
    "barcode": "9300601249114",
    "source": "web_search",
  },
  "scores": {
    "methodology_version": "v1.4",
    "pillars": {
      "body": 18,
      "ethics": 18,
      "open": 18,
      "planet": 18,
    },
    "trust": 72,
  },
  "signals": {
    "premium_insight": [],
    "safety_regulatory": [],
    "transparency": [],
    "user_preference": [],
  },
  "sources_trace": [
    {
      "id": "web_search",
      "status": "hit",
    },
  ],
  "terminal_state": "success",
}
`;

exports[`scan output contract (golden) matches frozen baseline — NZ market metadata: nz-core-clean 1`] = `
{
  "barcode": "9421901881054",
  "confidence": {
    "label": "medium",
    "value": 0.62885,
  },
  "coverage": {
    "completeness": 0.42,
    "flags": [
      "low_completeness",
    ],
  },
  "errors": undefined,
  "market": "NZ",
  "premium": {
    "subscriber": false,
  },
  "product_stub": {
    "barcode": "9421901881054",
    "source": "openfoodfacts",
  },
  "scores": {
    "methodology_version": "v1.4",
    "pillars": {
      "body": 18,
      "ethics": 18,
      "open": 18,
      "planet": 18,
    },
    "trust": 72,
  },
  "signals": {
    "premium_insight": [],
    "safety_regulatory": [],
    "transparency": [],
    "user_preference": [],
  },
  "sources_trace": [
    {
      "id": "openfoodfacts",
      "status": "hit",
    },
  ],
  "terminal_state": "success",
}
`;

exports[`scan output contract (golden) matches frozen baseline — no recall, high completeness: no-recall-clean-au 1`] = `
{
  "barcode": "9300601249114",
  "confidence": {
    "label": "medium",
    "value": 0.62885,
  },
  "coverage": {
    "completeness": 0.42,
    "flags": [
      "low_completeness",
    ],
  },
  "errors": undefined,
  "market": "AU",
  "premium": {
    "subscriber": false,
  },
  "product_stub": {
    "barcode": "9300601249114",
    "source": "openfoodfacts",
  },
  "scores": {
    "methodology_version": "v1.4",
    "pillars": {
      "body": 18,
      "ethics": 18,
      "open": 18,
      "planet": 18,
    },
    "trust": 72,
  },
  "signals": {
    "premium_insight": [],
    "safety_regulatory": [],
    "transparency": [],
    "user_preference": [],
  },
  "sources_trace": [
    {
      "id": "openfoodfacts",
      "status": "hit",
    },
  ],
  "terminal_state": "success",
}
`;

exports[`scan output contract (golden) matches frozen baseline — partial terminal adds analysis_incomplete flag: partial-terminal 1`] = `
{
  "barcode": "9300601249114",
  "confidence": {
    "label": "low",
    "value": 0.465225,
  },
  "coverage": {
    "completeness": 0.07,
    "flags": [
      "low_completeness",
      "missing_nutrition",
      "missing_ingredients",
      "analysis_incomplete",
    ],
  },
  "errors": undefined,
  "market": "AU",
  "premium": {
    "subscriber": false,
  },
  "product_stub": {
    "barcode": "9300601249114",
    "source": "openfoodfacts",
  },
  "scores": {
    "methodology_version": "v1.4",
    "pillars": {
      "body": 18,
      "ethics": 18,
      "open": 18,
      "planet": 18,
    },
    "trust": 72,
  },
  "signals": {
    "premium_insight": [],
    "safety_regulatory": [],
    "transparency": [],
    "user_preference": [],
  },
  "sources_trace": [
    {
      "id": "openfoodfacts",
      "status": "hit",
    },
  ],
  "terminal_state": "partial",
}
`;
